--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -67,6 +67,7 @@ services:
       - LINE_CHANNEL_ID=${LINE_CHANNEL_ID}
       - LINE_CHANNEL_SECRET=${LINE_CHANNEL_SECRET}
       - LINE_REDIRECT_URI=${LINE_REDIRECT_URI}
+      - STREAMLIT_SERVER_MAX_UPLOAD_SIZE=7200
     networks:
       - app-network
 
